--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,23 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="true" class="ion-no-border">
+
   <ion-toolbar>
+
     <ion-title>
-      Tab 1
+
+      Novedades
+
     </ion-title>
+    <ion-avatar slot="start" class="ion-padding">
+      <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/d77a6343106623.57e3765daad26.jpg">
+    </ion-avatar>
   </ion-toolbar>
-</ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+</ion-header >
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+<ion-content class="ion-padding" >
+
+  <app-noticias [noticias]="noticias" title="Noticias">
+
+  </app-noticias>
+
 </ion-content>
