--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -4,12 +4,12 @@
 
     <ion-title>
 
-      Novedades
+      KGDBMN NOTICIAS
 
     </ion-title>
-    <ion-avatar slot="start" class="ion-padding">
-      <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/d77a6343106623.57e3765daad26.jpg">
-    </ion-avatar>
+<ion-avatar slot="start" class="ion-padding">
+            <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/d77a6343106623.57e3765daad26.jpg">
+          </ion-avatar>
   </ion-toolbar>
 
 </ion-header >
