--- a/src/app/components/noticia/noticia.component.html
+++ b/src/app/components/noticia/noticia.component.html
@@ -9,7 +9,7 @@
       </ion-col>
 
       <ion-col align="right">
-      <ion-button (click)="onClick()" fill="clear">
+      <ion-button (click)="lanzarMenu()" fill="clear">
         <ion-icon  slot="icon-only" name="ellipsis-horizontal-outline"></ion-icon>
       </ion-button>
     </ion-col>
