--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -4,7 +4,7 @@
 
     <ion-title>
 
-      KGDBMN NOTICIAS
+      KGDBMN Noticias
 
     </ion-title>
 <ion-avatar slot="start" class="ion-padding">
