--- a/src/app/components/noticia/noticia.component.scss
+++ b/src/app/components/noticia/noticia.component.scss
@@ -1,8 +1,18 @@
 .article-name{
     color: #FF001D;
-    size: 11px;
+    size: 13px;
+    font-weight: bolder;
 }
 
 .article-index{
     color: #ffffff;
 }
+
+.cardnoticia{
+    height: 600px;
+    width: 100%;
+    background: #D1C4E9;
+    color: #000000;
+    
+}
+
