--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -9,13 +9,13 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content color="beige">
+<ion-content class="ion-padding">
 
   <app-noticias *ngIf="dataLocalService.noticias.length > 0" [noticias]="dataLocalService.noticias" [enFavoritos]="true"></app-noticias>
   
-  <ion-slides [options]="sliderOpts" *ngIf="dataLocalService.noticias.length === 0">
+  <ion-slides *ngIf="dataLocalService.noticias.length === 0">
     <ion-slide>
-      <h1 color="light">No Favorite News</h1>
+      <h1 color="light">No Hay Favoritos</h1>
     </ion-slide>
   </ion-slides>
 
