--- a/src/app/components/noticia/noticia.component.html
+++ b/src/app/components/noticia/noticia.component.html
@@ -2,7 +2,7 @@
   <ion-card-subtitle class="ion-margin">
 
     <!-- Metodo para abrir noticia -->
-    <ion-row class="ion-aling-item-center" fixed>
+    <ion-row class="ion-aling-item-center">
       <ion-col  class="ion-margin">
        <!--<span class="article-index"> {{ index }} </span>-->
         <span class="article-name" > {{ noticia.source.name}}</span>
@@ -11,7 +11,7 @@
       <ion-col align="right">
          <!--action-sheet-->
       <ion-button (click)="onClick()" fill="clear">
-        <ion-icon  slot="icon-only" name="ellipsis-horizontal-outline"></ion-icon>
+        <ion-icon  slot="icon-only" name="ellipsis-vertical-outline"></ion-icon>
       </ion-button>
     </ion-col>
     </ion-row>
