--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -11,11 +11,11 @@
 
 <ion-content class="ion-padding">
 
-  <app-noticias *ngIf="dataLocalService.noticias.length > 0" [noticias]="dataLocalService.noticias" [enFavoritos]="true"></app-noticias>
+  <app-noticias *ngIf="dataLocalService.noticias.length > 0" [noticias]="dataLocalService.noticias" [Favoritos]="true"></app-noticias>
   
-  <ion-slides *ngIf="dataLocalService.noticias.length === 0">
+  <ion-slides [options]="sliderOpts" *ngIf="dataLocalService.noticias.length === 0">
     <ion-slide>
-      <h1 color="light">No Hay Favoritos</h1>
+      <h1>No Favorite News</h1>
     </ion-slide>
   </ion-slides>
 
