YA ES EL FINAL LO PROMETO

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -15,7 +15,7 @@
   
   <ion-slides [options]="sliderOpts" *ngIf="dataLocalService.noticias.length === 0">
     <ion-slide>
-      <h1>No Favorite News</h1>
+      <h1>No Hay Noticias</h1>
     </ion-slide>
   </ion-slides>
 
