--- a/src/app/components/noticias/noticias.component.html
+++ b/src/app/components/noticias/noticias.component.html
@@ -4,7 +4,8 @@
 
     <ion-col *ngFor="let noticia of noticias;   let i = index"  size="12" size-lg="3" size-md="4" size-sm="6">
 
-      <app-noticia [noticia]="noticia" [index]="i + 1"> 
+      <app-noticia [noticia]="noticia" [index]="i + 1" [
+      Favoritos]="Favoritos"> 
 
       </app-noticia>
 
