header , eliminacion de index

--- a/src/app/components/nota/nota.component.scss
+++ b/src/app/components/nota/nota.component.scss
@@ -1,11 +1,7 @@
 .article-name{
-    color: #FF001D;
+    color: #311B92;
     size: 13px;
     font-weight: bolder;
-}
-
-.article-index{
-    color: #ffffff;
 }
 
 .cardnoticia{
@@ -16,3 +12,6 @@
     
 }
 
+.vinculo{
+     color: #311B92;
+}
