--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,19 +1,4 @@
-<ion-header [translucent]="true" class="ion-no-border">
-
-  <ion-toolbar>
-
-    <ion-title>
-
-      KGDBMN Noticias
-
-    </ion-title>
-<ion-avatar slot="start" class="ion-padding">
-            <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/d77a6343106623.57e3765daad26.jpg">
-          </ion-avatar>
-  </ion-toolbar>
-
-</ion-header >
-
+<app-header title="KGDBMN Noticias"></app-header>
 <ion-content class="ion-padding" >
 
   <app-noticias [noticias]="noticias" title="Noticias">
