--- a/src/app/components/nota/nota.component.html
+++ b/src/app/components/nota/nota.component.html
@@ -1,15 +1,12 @@
 <ion-card class="cardnoticia">
   <ion-card-subtitle class="ion-margin">
-
-    <!-- Metodo para abrir noticia -->
     <ion-row class="ion-aling-item-center">
       <ion-col  class="ion-margin">
-       <!--<span class="article-index"> {{ index }} </span>-->
-        <span class="article-name" > {{ noticia.source.name}}</span>
+        <span class="article-name" > {{ nota.source.name}}</span>
       </ion-col>
 
       <ion-col align="right">
-         <!--action-sheet-->
+         <!--metodo action-sheet-->
       <ion-button (click)="onClick()" fill="clear">
         <ion-icon  slot="icon-only" name="ellipsis-vertical-outline"></ion-icon>
       </ion-button>
@@ -17,17 +14,16 @@
     </ion-row>
   </ion-card-subtitle>
 
-
-
   <ion-card-title class="ion-padding-horizontal  ion-margin-botton">
-    {{ noticia.title }}
+    {{ nota.title }}
   </ion-card-title>
-  <ion-img  *ngIf="noticia.urlToImage" [src]="noticia.urlToImage" (click)="Abrir()" class="ion-margin">
+  <ion-img  *ngIf="nota.urlToImage" [src]="nota.urlToImage" class="ion-margin">
   </ion-img>
 
-  <ion-card-content *ngIf="noticia.description">
-    <p>{{noticia.description}}</p>
-    <a (click)="Abrir()"> Ver mas...</a>
+  <ion-card-content *ngIf="nota.description">
+    <p>{{nota.description}}</p> 
+    <!-- Metodo para abrir noticia -->
+    <a class="vinculo" (click)="Abrir()"> Ver mas...</a>
   </ion-card-content>
 
 </ion-card>
