--- a/src/app/components/noticias/noticias.component.html
+++ b/src/app/components/noticias/noticias.component.html
@@ -2,9 +2,9 @@
 
   <ion-row>
 
-    <ion-col *ngFor="let noticia of noticias;   let i = index"  size="12" size-lg="3" size-md="4" size-sm="6">
+    <ion-col *ngFor="let nota of noticias"   size="12" size-lg="3" size-md="4" size-sm="6">
 
-      <app-noticia [noticia]="noticia" [index]="i + 1" [Favoritos]="Favoritos"> </app-noticia>
+      <app-nota [nota]="nota"  [Favoritos]="Favoritos"> </app-nota>
 
     </ion-col>
 
