--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -17,7 +17,7 @@
 <ion-content class="ion-padding" >
   
 
-  <ion-segment [value]="selectedCategory" (ionChange)="segmentChanged($event)" scrollable  mode="md">
+  <ion-segment class="selector" [value]="selected" (ionChange)="segmentChanged($event)" scrollable  mode="md">
 
     <ion-segment-button *ngFor="let category of categories" [value]="category">
         <ion-label class="ion-text-capitalize">{{category}}</ion-label>
