--- a/src/app/components/nota/nota.component.html
+++ b/src/app/components/nota/nota.component.html
@@ -1,14 +1,14 @@
 <ion-card class="cardnoticia">
   <ion-card-subtitle class="ion-margin">
     <ion-row class="ion-aling-item-center">
-      <ion-col  class="ion-margin">
+      <ion-col  class="ion-margin-top">
         <span class="article-name" > {{ nota.source.name}}</span>
       </ion-col>
 
       <ion-col align="right">
          <!--metodo action-sheet-->
       <ion-button (click)="onClick()" fill="clear">
-        <ion-icon  slot="icon-only" name="ellipsis-vertical-outline"></ion-icon>
+        <ion-icon slot="icon-only" name="ellipsis-vertical-outline"></ion-icon>
       </ion-button>
     </ion-col>
     </ion-row>
