--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
   <ion-title>{{title}}</ion-title>
 
   <ion-avatar slot="start" class="ion-padding">
-    <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/d77a6343106623.57e3765daad26.jpg">
+    <img src="https://w7.pngwing.com/pngs/393/313/png-transparent-computer-icons-disha-patani-puzzle-guess-the-emoji-free-word-search-new-free-puzzles-news-miscellaneous-purple-violet.png">
   </ion-avatar>
 
   </ion-toolbar>
